--- a/filme.html
+++ b/filme.html
@@ -5,13 +5,27 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <h1></h1>
-        <img scr="">
+        <h1>Vingadores Ultimato: A ameaça de Washington o conquistador</h1>
+        <a href="index.html"> 
+            <img src="imgs/logo.jpg">
+        </a>
+        <img scr="imgs/filme.jpg">
         <p></p>
         <ul>
             <li></li>
             <li></li>
             <li></li>
         </ul>
+        <div>
+            <a href=""> 
+                <img src="imgs/insta.jpg">
+              </a>
+            <a href=""> 
+                <img src="imgs/youtube.jpg">
+            </a>
+            <a href=""> 
+                <img src="imgs/face.jpg">
+            </a>
+        </div>
     </body>
 </html>
