--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <img src="">
-        <p></p>
-        <h2></h2>
+        <img src="imgs/logo.jpg" width="200">
+        <img src="imgs/artista.jpg" width="200">
+        <p>Washington e conhecido atualmente como a maior estrela que já pisou neste planeta.</p>
+        <p>Ganhou fama graças a sua beleza, inteligência e carisma.</p>
+        <p>Já atuou em diversar áreas e profissões (que superam até mesmo a Barbie) e como exemplo de seu currículo 
+            pode se mencionar a sua atuação como vilão no filme de maior sucesso da Marvel, e ele escreveudiversos livro como Jurassic Park: O Mundo Perdido</p>
+        <h2>Lançamentos</h2>
         <ul>
-            <li> </li>
-            <li> </li>
-            <li> </li>
+            <li><a href="filme.html"> 
+                <img src="imgs/filme.jpg" width="200">
+              </a>
+            </li>
+
+            <li><a href="livro.html"> 
+                <img src="imgs/livro.jpg" width="200">
+              </a>
+            </li>
+
+            <li><a href="musica.html"> 
+                <img src="imgs/musica.jpg" width="200">
+              </a></li>
         </ul>
-        
+        <div>
+            <a href=""> 
+                <img src="imgs/insta.jpg" width="200">
+              </a>
+            <a href=""> 
+                <img src="imgs/youtube.jpg" width="200">
+            </a>
+            <a href=""> 
+                <img src="imgs/face.jpg" width="200">
+            </a>
+        </div>
     </body>
 </html>
