--- a/livro.html
+++ b/livro.html
@@ -5,7 +5,21 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <img scr="">
+        <a href="index.html"> 
+            <img src="imgs/logo.jpg">
+        </a>
+        <img scr="imgs/livro.jpg">
         <p>resumo do livro</p>
     </body>
+    <div>
+        <a href=""> 
+            <img src="imgs/insta.jpg">
+          </a>
+        <a href=""> 
+            <img src="imgs/youtube.jpg">
+        </a>
+        <a href=""> 
+            <img src="imgs/face.jpg">
+        </a>
+    </div>
 </html>
