--- a/musica.html
+++ b/musica.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WASHINGTON</title>
+        <title>Silvano Sales, o cantor apaixonadooo!!!</title>
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
+        <a href="index.html"> 
+            <img src="imgs/logo.jpg">
+        </a>
+        <img scr="imgs/musica.jpg">
 
+        <div>
+            <a href=""> 
+                <img src="imgs/insta.jpg">
+            </a>
+            <a href=""> 
+                <img src="imgs/youtube.jpg">
+            </a>
+            <a href=""> 
+                <img src="imgs/face.jpg">
+            </a>
+        </div>
     </body>
 </html>
