--- a/filme.html
+++ b/filme.html
@@ -7,24 +7,28 @@
     <body>
         <h1>Vingadores Ultimato: A ameaça de Washington o conquistador</h1>
         <a href="index.html"> 
-            <img src="imgs/logo.jpg">
+            <img src="imgs/logo.jpg" width="100">
         </a>
-        <img scr="imgs/filme.jpg">
-        <p></p>
+
+        <img scr="imgs/filme.jpg" width="200">
+        <p>O filme narra uma <strong>luta pela vida e existência</strong>, onde os maiores heróis da terra e do mundo <strong>terão que se unir com um velho inimigo</strong> para enfrentar <strong>uma ameaça maior</strong>, mais conhecido como O Conquistador</p>
+        <p>Gênero do filme:<strong> Aventura e Ação</strong></p>
+        <href>https://youtu.be/spJoZReeIeQ?si=ZyqIBZXbbs7veUmP</href>
+        <h2>Plataformas para assistir ao filme</h2>
         <ul>
-            <li></li>
-            <li></li>
+            <li><a href="https://www.disneyplus.com/pt-br"></a>Disney+</li>
+            <li><a href="https://tv.apple.com/br/movie/vingadores-ultimato/umc.cmc.4ao9tm6b6rz4sy7yj5v13ltf8">ApleeTV</a></li>
             <li></li>
         </ul>
-        <div>
+        <div class="rodape">
             <a href=""> 
-                <img src="imgs/insta.jpg">
+                <img src="imgs/insta.jpg" width="200">
               </a>
             <a href=""> 
-                <img src="imgs/youtube.jpg">
+                <img src="imgs/youtube.jpg" width="200">
             </a>
             <a href=""> 
-                <img src="imgs/face.jpg">
+                <img src="imgs/face.jpg" width="200">
             </a>
         </div>
     </body>
