--- a/livro.html
+++ b/livro.html
@@ -6,20 +6,20 @@
     </head>
     <body>
         <a href="index.html"> 
-            <img src="imgs/logo.jpg">
+            <img src="imgs/logo.jpg" width="100">
         </a>
         <img scr="imgs/livro.jpg">
         <p>resumo do livro</p>
     </body>
     <div>
         <a href=""> 
-            <img src="imgs/insta.jpg">
+            <img src="imgs/insta.jpg" width="200">
           </a>
         <a href=""> 
-            <img src="imgs/youtube.jpg">
+            <img src="imgs/youtube.jpg" width="200">
         </a>
         <a href=""> 
-            <img src="imgs/face.jpg">
+            <img src="imgs/face.jpg" width="200">
         </a>
     </div>
 </html>
