--- a/musica.html
+++ b/musica.html
@@ -6,19 +6,19 @@
     </head>
     <body>
         <a href="index.html"> 
-            <img src="imgs/logo.jpg">
+            <img src="imgs/logo.jpg" width="100">
         </a>
         <img scr="imgs/musica.jpg">
 
         <div>
             <a href=""> 
-                <img src="imgs/insta.jpg">
+                <img src="imgs/insta.jpg" width="200">
             </a>
             <a href=""> 
-                <img src="imgs/youtube.jpg">
+                <img src="imgs/youtube.jpg" width="200">
             </a>
             <a href=""> 
-                <img src="imgs/face.jpg">
+                <img src="imgs/face.jpg" width="200">
             </a>
         </div>
     </body>
