--- a/filme.html
+++ b/filme.html
@@ -18,16 +18,17 @@
         <ul>
             <li><a href="https://www.disneyplus.com/pt-br"></a>Disney+</li>
             <li><a href="https://tv.apple.com/br/movie/vingadores-ultimato/umc.cmc.4ao9tm6b6rz4sy7yj5v13ltf8">ApleeTV</a></li>
-            <li></li>
+            
         </ul>
         <div class="rodape">
-            <a href=""> 
+            <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+            <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
                 <img src="imgs/insta.jpg" width="200">
               </a>
-            <a href=""> 
+            <a href="https://www.youtube.com/@marvelbr"> 
                 <img src="imgs/youtube.jpg" width="200">
             </a>
-            <a href=""> 
+            <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
                 <img src="imgs/face.jpg" width="200">
             </a>
         </div>
