--- a/livro.html
+++ b/livro.html
@@ -9,16 +9,36 @@
             <img src="imgs/logo.jpg" width="100">
         </a>
         <img scr="imgs/livro.jpg">
-        <p>resumo do livro</p>
+        <p>Em O Mundo Perdido, seis anos se passaram desde os terríveis acontecimentos no parque.
+             Seis anos, desde que o sonho extraordinário, nos limites entre a ciência e a imaginação
+             humana, acabou se tornando um <em>trágico pesadelo</em>. A Isla Nublar <em>não era o único lugar</em> usado
+               por John Hammond em suas pesquisas genéticas de ponta.
+        </p>
+        <p>Gênero do livro<strong>Ficção, Terror e Aventura.</strong></p>
+        <title>Índice</title>
+        <ul>
+            <la>Início de um sonho</la>
+                <la>Arrumando as malas</la>
+            <la>A viagem</la>
+            <la>Teoria do Caos</la>
+                <la>O dr.Malcon esta certo</la>
+            <la>O inferno na terra</la>
+                <la>Mostes sem fim</la>
+            <la>Viver ou morrer</la>
+        </ul>
+        <h2>Preço do Livro</h2>
+        <p>R$150,00</p>
+        <a href=""
     </body>
     <div>
-        <a href=""> 
+        <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+        <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
             <img src="imgs/insta.jpg" width="200">
           </a>
-        <a href=""> 
+        <a href="https://www.youtube.com/@marvelbr"> 
             <img src="imgs/youtube.jpg" width="200">
         </a>
-        <a href=""> 
+        <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
             <img src="imgs/face.jpg" width="200">
         </a>
     </div>
