--- a/musica.html
+++ b/musica.html
@@ -8,16 +8,38 @@
         <a href="index.html"> 
             <img src="imgs/logo.jpg" width="100">
         </a>
+        <br>
         <img scr="imgs/musica.jpg">
+        <p>Para a criação desde álbum o artista Washington se inspirou nas músicas que eram cantadas pelas as meninas do fundo do ônibus do transposte que trazia alunos do IF para Salinas </p>
+        <p>Essas meninas que já se formaram eram responsáveis pela alegria e bagunça do ônibus, mas elas já se formaram e desde de então o ônibus vem num completo e triste silêncio.</p>
+        <p>Outra coisa que inspirou o nome do álbum foi uma frase que as meninas falavam sempre, que era: <em>Silvano Sales, O cantor apaixonadoooo!!!</em></p>
+        <h2>Faixas</h2>
+        <ul>
+            <li>O que pensa que eu sou?</li>
+            <li>Romance</li>
+            <li>Secretária</li>
+            <li>Daqui pra sempre</li>
+            <li>Toxic</li>
+            <li>Priquito</li>
+        </ul>
+        <li><a href="https://www.deezer.com/br/"> 
+            <img src="imgs/deezer2.jpg" width="200">
+          </a>
+        </li>
 
+        <li><a href="https://open.spotify.com/intl-pt"> 
+            <img src="imgs/spotify.jpg" width="200">
+          </a>
+        </li>
         <div>
-            <a href=""> 
+            <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+            <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
                 <img src="imgs/insta.jpg" width="200">
-            </a>
-            <a href=""> 
+              </a>
+            <a href="https://www.youtube.com/@marvelbr"> 
                 <img src="imgs/youtube.jpg" width="200">
             </a>
-            <a href=""> 
+            <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
                 <img src="imgs/face.jpg" width="200">
             </a>
         </div>
