--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <img src="imgs/logo.jpg" width="200">
-        
+        <br>
         <img src="imgs/artista.jpg" width="200">
         <p>Washington e conhecido atualmente como a maior estrela que já pisou neste planeta.</p>
         <p>Ganhou fama graças a sua beleza, inteligência e carisma.</p>
@@ -29,13 +29,14 @@
               </a></li>
         </ul>
         <div>
-            <a href=""> 
+            <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+            <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
                 <img src="imgs/insta.jpg" width="200">
               </a>
-            <a href=""> 
+            <a href="https://www.youtube.com/@marvelbr"> 
                 <img src="imgs/youtube.jpg" width="200">
             </a>
-            <a href=""> 
+            <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
                 <img src="imgs/face.jpg" width="200">
             </a>
         </div>
