--- a/filme.html
+++ b/filme.html
@@ -2,25 +2,29 @@
 <html>
     <head>
         <title>WASHINGTON</title>
-        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
         <h1>Vingadores Ultimato: A ameaça de Washington o conquistador</h1>
         <a href="index.html"> 
             <img src="imgs/logo.jpg" width="100">
         </a>
-
+        <h1>Menu</h1>
+        <ul>
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="livro.html">Livro</a></li>
+            <li><a href="filme.html">Filme</a></li>
+            <li><a href="musica.html">Música</a></li>
+        </ul>
         <img scr="imgs/filme.jpg" width="200">
         <p>O filme narra uma <strong>luta pela vida e existência</strong>, onde os maiores heróis da terra e do mundo <strong>terão que se unir com um velho inimigo</strong> para enfrentar <strong>uma ameaça maior</strong>, mais conhecido como O Conquistador</p>
         <p>Gênero do filme:<strong> Aventura e Ação</strong></p>
-        <href>https://youtu.be/spJoZReeIeQ?si=ZyqIBZXbbs7veUmP</href>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/spJoZReeIeQ?si=IXhxxb0Z2Od7ctik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h2>Plataformas para assistir ao filme</h2>
         <ul>
             <li><a href="https://www.disneyplus.com/pt-br"></a>Disney+</li>
             <li><a href="https://tv.apple.com/br/movie/vingadores-ultimato/umc.cmc.4ao9tm6b6rz4sy7yj5v13ltf8">ApleeTV</a></li>
-            
         </ul>
-        <div class="rodape">
+        <div>
             <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
             <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
                 <img src="imgs/insta.jpg" width="200">
