--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
     <head>
         <title>WASHINGTON</title>
-        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <img src="imgs/logo.jpg" width="200">
-        <br>
+        <a href="index.html"> 
+            <img src="imgs/logo.jpg" width="100">
+        </a>
+        <h1>Menu</h1>
+        <ul>
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="livro.html">Livro</a></li>
+            <li><a href="filme.html">Filme</a></li>
+            <li><a href="musica.html">Música</a></li>
+        </ul>
         <img src="imgs/artista.jpg" width="200">
         <p>Washington e conhecido atualmente como a maior estrela que já pisou neste planeta.</p>
         <p>Ganhou fama graças a sua beleza, inteligência e carisma.</p>
