--- a/livro.html
+++ b/livro.html
@@ -2,33 +2,46 @@
 <html>
     <head>
         <title>titulo do livro</title>
-        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
         <a href="index.html"> 
             <img src="imgs/logo.jpg" width="100">
         </a>
-        <img scr="imgs/livro.jpg">
+        <h1>Menu</h1>
+        <ul>
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="livro.html">Livro</a></li>
+            <li><a href="filme.html">Filme</a></li>
+            <li><a href="musica.html">Música</a></li>
+        </ul>
+        <img scr="imgs/livro.jpg" width="100">
         <p>Em O Mundo Perdido, seis anos se passaram desde os terríveis acontecimentos no parque.
              Seis anos, desde que o sonho extraordinário, nos limites entre a ciência e a imaginação
              humana, acabou se tornando um <em>trágico pesadelo</em>. A Isla Nublar <em>não era o único lugar</em> usado
                por John Hammond em suas pesquisas genéticas de ponta.
         </p>
-        <p>Gênero do livro<strong>Ficção, Terror e Aventura.</strong></p>
+        <p>Gênero do livro: <strong>Ficção, Terror e Aventura.</strong></p>
         <title>Índice</title>
         <ul>
-            <la>Início de um sonho</la>
-                <la>Arrumando as malas</la>
-            <la>A viagem</la>
-            <la>Teoria do Caos</la>
-                <la>O dr.Malcon esta certo</la>
-            <la>O inferno na terra</la>
-                <la>Mostes sem fim</la>
-            <la>Viver ou morrer</la>
+            <li>Início de um sonho</li>
+            <ul>
+                <li>Arrumando as malas</li>
+            </ul>
+            <li>A viagem</li>
+            <li>Teoria do Caos</li>
+            <ul>
+                <li>O dr. Malcon está certo</li>
+            </ul>
+            <li>O inferno na terra</li>
+            <ul>
+                <li>Mortes sem fim</li>
+            </ul>
+            <li>Viver ou morrer</li>
+            
         </ul>
         <h2>Preço do Livro</h2>
         <p>R$150,00</p>
-        <a href=""
+        <a href="https://shopee.com.br/product/347420140/22311517135?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMVlhT2w0bHVndU41VWt2d3g1MzRINHhzMTVVTHYwMmNETVhTOU1TRjBnQzVVSzFISEY4Z0VHaU9rQy9DYXZEQ1QyNFd6T1VZcDFHNVkrRWJmellBaG9kVnpxQU1DdUtEbjFmV1VVQ1RqMHR3PT0&srsltid=AfmBOoqHH-Ta_B1OQaBvmqzmCgtAu6J__t3wjtZ_pwv9gCTp1jvaMLNrJ3g">Compre agora!</a>
     </body>
     <div>
         <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
