--- a/musica.html
+++ b/musica.html
@@ -2,13 +2,18 @@
 <html>
     <head>
         <title>Silvano Sales, o cantor apaixonadooo!!!</title>
-        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
         <a href="index.html"> 
             <img src="imgs/logo.jpg" width="100">
         </a>
-        <br>
+        <h1>Menu</h1>
+        <ul>
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="livro.html">Livro</a></li>
+            <li><a href="filme.html">Filme</a></li>
+            <li><a href="musica.html">Música</a></li>
+        </ul>
         <img scr="imgs/musica.jpg">
         <p>Para a criação desde álbum o artista Washington se inspirou nas músicas que eram cantadas pelas as meninas do fundo do ônibus do transposte que trazia alunos do IF para Salinas </p>
         <p>Essas meninas que já se formaram eram responsáveis pela alegria e bagunça do ônibus, mas elas já se formaram e desde de então o ônibus vem num completo e triste silêncio.</p>
@@ -31,17 +36,17 @@
             <img src="imgs/spotify.jpg" width="200">
           </a>
         </li>
-        <div>
-            <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
-            <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
-                <img src="imgs/insta.jpg" width="200">
-              </a>
-            <a href="https://www.youtube.com/@marvelbr"> 
-                <img src="imgs/youtube.jpg" width="200">
-            </a>
-            <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
-                <img src="imgs/face.jpg" width="200">
-            </a>
-        </div>
     </body>
+    <div>
+        <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+        <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
+            <img src="imgs/insta.jpg" width="200">
+          </a>
+        <a href="https://www.youtube.com/@marvelbr"> 
+            <img src="imgs/youtube.jpg" width="200">
+        </a>
+        <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
+            <img src="imgs/face.jpg" width="200">
+        </a>
+    </div>
 </html>
