--- a/filme.html
+++ b/filme.html
@@ -15,7 +15,8 @@
             <li><a href="filme.html">Filme</a></li>
             <li><a href="musica.html">Música</a></li>
         </ul>
-        <img scr="imgs/filme.jpg" width="200">
+
+        <img src="imgs/filme.jpg" width="400">
         <p>O filme narra uma <strong>luta pela vida e existência</strong>, onde os maiores heróis da terra e do mundo <strong>terão que se unir com um velho inimigo</strong> para enfrentar <strong>uma ameaça maior</strong>, mais conhecido como O Conquistador</p>
         <p>Gênero do filme:<strong> Aventura e Ação</strong></p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/spJoZReeIeQ?si=IXhxxb0Z2Od7ctik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
