--- a/livro.html
+++ b/livro.html
@@ -14,7 +14,7 @@
             <li><a href="filme.html">Filme</a></li>
             <li><a href="musica.html">Música</a></li>
         </ul>
-        <img scr="imgs/livro.jpg" width="100">
+        <img src="imgs/livro.jpg" width="300">
         <p>Em O Mundo Perdido, seis anos se passaram desde os terríveis acontecimentos no parque.
              Seis anos, desde que o sonho extraordinário, nos limites entre a ciência e a imaginação
              humana, acabou se tornando um <em>trágico pesadelo</em>. A Isla Nublar <em>não era o único lugar</em> usado
