--- a/musica.html
+++ b/musica.html
@@ -14,7 +14,7 @@
             <li><a href="filme.html">Filme</a></li>
             <li><a href="musica.html">Música</a></li>
         </ul>
-        <img scr="imgs/musica.jpg">
+        <img src="imgs/musica.jpg" width="200">
         <p>Para a criação desde álbum o artista Washington se inspirou nas músicas que eram cantadas pelas as meninas do fundo do ônibus do transposte que trazia alunos do IF para Salinas </p>
         <p>Essas meninas que já se formaram eram responsáveis pela alegria e bagunça do ônibus, mas elas já se formaram e desde de então o ônibus vem num completo e triste silêncio.</p>
         <p>Outra coisa que inspirou o nome do álbum foi uma frase que as meninas falavam sempre, que era: <em>Silvano Sales, O cantor apaixonadoooo!!!</em></p>
