--- a/filme.html
+++ b/filme.html
@@ -25,6 +25,9 @@
             <li><a href="https://www.disneyplus.com/pt-br"></a>Disney+</li>
             <li><a href="https://tv.apple.com/br/movie/vingadores-ultimato/umc.cmc.4ao9tm6b6rz4sy7yj5v13ltf8">ApleeTV</a></li>
         </ul>
+        
+    </body>
+    <footer>
         <div>
             <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
             <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
@@ -37,5 +40,5 @@
                 <img src="imgs/face.jpg" width="200">
             </a>
         </div>
-    </body>
+    </footer>
 </html>
