--- a/livro.html
+++ b/livro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>titulo do livro</title>
+        <title>Jurassic Park: O Mundo Perdido</title>
     </head>
     <body>
         <a href="index.html"> 
@@ -43,16 +43,18 @@
         <p>R$150,00</p>
         <a href="https://shopee.com.br/product/347420140/22311517135?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMVlhT2w0bHVndU41VWt2d3g1MzRINHhzMTVVTHYwMmNETVhTOU1TRjBnQzVVSzFISEY4Z0VHaU9rQy9DYXZEQ1QyNFd6T1VZcDFHNVkrRWJmellBaG9kVnpxQU1DdUtEbjFmV1VVQ1RqMHR3PT0&srsltid=AfmBOoqHH-Ta_B1OQaBvmqzmCgtAu6J__t3wjtZ_pwv9gCTp1jvaMLNrJ3g">Compre agora!</a>
     </body>
-    <div>
-        <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
-        <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
-            <img src="imgs/insta.jpg" width="200">
-          </a>
-        <a href="https://www.youtube.com/@marvelbr"> 
-            <img src="imgs/youtube.jpg" width="200">
-        </a>
-        <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
-            <img src="imgs/face.jpg" width="200">
-        </a>
-    </div>
+    <footer>
+        <div>
+            <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+            <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
+                <img src="imgs/insta.jpg" width="200">
+              </a>
+            <a href="https://www.youtube.com/@marvelbr"> 
+                <img src="imgs/youtube.jpg" width="200">
+            </a>
+            <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
+                <img src="imgs/face.jpg" width="200">
+            </a>
+        </div>
+    </footer>
 </html>
