--- a/musica.html
+++ b/musica.html
@@ -37,16 +37,18 @@
           </a>
         </li>
     </body>
-    <div>
-        <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
-        <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
-            <img src="imgs/insta.jpg" width="200">
-          </a>
-        <a href="https://www.youtube.com/@marvelbr"> 
-            <img src="imgs/youtube.jpg" width="200">
-        </a>
-        <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
-            <img src="imgs/face.jpg" width="200">
-        </a>
-    </div>
+    <footer>
+        <div>
+            <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
+            <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
+                <img src="imgs/insta.jpg" width="200">
+              </a>
+            <a href="https://www.youtube.com/@marvelbr"> 
+                <img src="imgs/youtube.jpg" width="200">
+            </a>
+            <a href="https://www.facebook.com/MarvelBR/?locale2=pt_BR&_rdr"> 
+                <img src="imgs/face.jpg" width="200">
+            </a>
+        </div>
+    </footer>
 </html>
