--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Washington e conhecido atualmente como a maior estrela que já pisou neste planeta.</p>
         <p>Ganhou fama graças a sua beleza, inteligência e carisma.</p>
         <p>Já atuou em diversar áreas e profissões (que superam até mesmo a Barbie) e como exemplo de seu currículo 
-            pode se mencionar a sua atuação como vilão no filme de maior sucesso da Marvel, e ele escreveudiversos livro como Jurassic Park: O Mundo Perdido</p>
+            pode se mencionar a sua atuação como vilão no filme de maior sucesso da Marvel, e ele escreveu diversos livro como Jurassic Park: O Mundo Perdido</p>
         <h2>Lançamentos</h2>
         <ul>
             <li><a href="filme.html"> 
@@ -35,6 +35,8 @@
                 <img src="imgs/musica.jpg" width="200">
               </a></li>
         </ul>
+    </body>
+    <footer>
         <div>
             <p><strong>Email de contato: </strong>vaca@aluno.ifnmg.edu.br</p>
             <a href="https://www.instagram.com/marvelbrasil/?hl=pt-br"> 
@@ -47,5 +49,5 @@
                 <img src="imgs/face.jpg" width="200">
             </a>
         </div>
-    </body>
+    </footer>
 </html>
